Bug 242557 - Kopete can receive but not send files in Yahoo
Summary: Kopete can receive but not send files in Yahoo
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Yahoo Plugin (other bugs)
Version First Reported In: 1.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-23 07:20 UTC by aries k
Modified: 2011-02-03 06:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aries k 2010-06-23 07:20:01 UTC
Version:           1.0.0 (using KDE 4.4.4) 
OS:                Linux

Hi, I think this has been an issue for a while. While it is pretty small it would be nice to have it fixed. So basically the problem is I can receive files in Yahoo but cannot send. When I attempt to send a file via the Yahoo protocol it will just say "file transfer failed" and the person I am trying to send the file to will get a "file transfer canceled" response (even though I did not cancel anything). It does not matter if the person is using Yahoo or a 3rd party client the file transfer will still fail. Anyone else having this issue? Thanks in advance.

Reproducible: Always

Steps to Reproduce:
Send any random file to a user of the Yahoo protocol.

Actual Results:  
I get a "file transfer failed" message and the user I am talking to gets a "file transfer canceled" message.

Expected Results:  
The file transfer was not successful as expected.

Basic Kopete configurations.
Comment 1 Raphael Kubo da Costa 2011-01-25 02:07:17 UTC
SVN commit 1216829 by rkcosta:

libkyahoo: Apply some fixes related to sending and receiving files.

From the ReviewBoard request:

  Receive part:
  a) protocol (as reading from various places) suggests that first a
  HEAD and then GET should be done. Current code was asking them in
  parallel.
  b) fixed the way sending the header was done.

  Sending:
  a) changed to an async method of doing the send
  b) send buffer size is dynamic to try to send as much as possible
  c) ... various - made it work.

  Maybe fixes also #194833 although I'm not very sure what is that one
  about.

Original patch by Cristi Posoiu <cristi.posoiu AT gmail>, thanks!

Cannot backport due to the string additions.

BUG: 242557
FIXED-IN: 4.7.0


 M  +73 -11    receivefiletask.cpp  
 M  +2 -0      receivefiletask.h  
 M  +140 -35   sendfiletask.cpp  
 M  +14 -0     sendfiletask.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1216829
Comment 2 aries k 2011-02-03 06:49:25 UTC
Glad to hear this has been worked on. Can't wait to try the 4.7.0 version to see how well sending a file in Yahoo works now. Thanks again.