libkyahoo: Apply some fixes related to sending and receiving files.

From the ReviewBoard request:

  Receive part:
  a) protocol (as reading from various places) suggests that first a
  HEAD and then GET should be done. Current code was asking them in
  parallel.
  b) fixed the way sending the header was done.

  Sending:
  a) changed to an async method of doing the send
  b) send buffer size is dynamic to try to send as much as possible
  c) ... various - made it work.

  Maybe fixes also #194833 although I'm not very sure what is that one
  about.

Original patch by Cristi Posoiu <cristi.posoiu AT gmail>, thanks!

Cannot backport due to the string additions.

BUG: 242557
FIXED-IN: 4.7.0

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1216829